--- a/Visualisierung/css/style.css
+++ b/Visualisierung/css/style.css
@@ -33,15 +33,15 @@ body {
 }
 /* IDs können mit einer Raute selektiert werden. */
 #renderer {
-    background-image: url("/Assets/Equirectangular_projection_world_map_without_borders.svg");
+    /* background-image: url("/Assets/Equirectangular_projection_world_map_without_borders.svg"); */
       /* Full height */
 
 
   /* Center and scale the image nicely */
-    background-position: center;
+    /* background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-color: rgba(255, 255, 255, 0.05);
+    background-color: rgba(255, 255, 255, 0.05); */
     width: 100vw;
     height: 100vh;
     overflow: hidden;
@@ -50,6 +50,11 @@ body {
     Hier hat z. B. der Renderer-Container ein margin von 5px. Somit beginnt das Balkendiagramm erst bei 5px (x- und y-Position)
     */
     position: absolute;
+}
+
+
+#renderer .worldMap {
+    width: 100%;
 }
 
 .dot {
@@ -80,7 +85,7 @@ body {
 
 .dotTsu {
     position:absolute;
-    background-color: blue;
+    background-color: #0066ff;
     border-radius: 50%;
 }
 #earthquakeInfoBox {
@@ -399,4 +404,38 @@ input {
 
   .turnOnOffArea {
     margin-top: 40px;
+  }
+
+  .controlButtons {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    flex-wrap: nowrap;
+  }
+
+
+  .btn {
+    background-color: darkgrey; /* Blue background */
+    border: none; /* Remove borders */
+    color: white; /* White text */
+    padding: 12px 16px; /* Some padding */
+    font-size: 16px; /* Set a font size */
+    cursor: pointer; /* Mouse pointer on hover */
+    color: white;
+    border-radius: 20px;
+    scale: 85%;
+  }
+
+  .btn:hover {
+    background-color: grey;
+  }
+
+  .boxbox {
+    justify-content: space-between;
+  }
+
+  .hr {
+    margin-top: 30px;
+    margin-bottom: 20px;
   }
