--- a/Visualisierung/css/style.css
+++ b/Visualisierung/css/style.css
@@ -22,12 +22,14 @@
 
 /* HTML-Tags können direkt per Name selektiert werden: body, div, p, etc. */
 body {
-    background-color: rgb(39,39,39);
+    background-color: rgb(20, 20, 30);
     color:white;
     font-family: 'Fira Sans', sans-serif;
     margin: 0;
     padding: 0;
 }
+
+
 #mainScreen {
     width: 100%;
 }
@@ -57,10 +59,20 @@ body {
     width: 100%;
 }
 
+/* .worldMap {
+
+}
+
+#mapContainer {
+
+} */
+
 .dot {
     position: absolute;
     background-color: white;
     border-radius: 50%;
+    /* -webkit-filter: drop-shadow(2px 2px 1px #2b5af7b3);
+    filter: drop-shadow(1px 0px 5px #ffac13d6); */
 }
 
 #hoverLabel, #clickLabel {
@@ -87,6 +99,11 @@ body {
     position:absolute;
     background-color: #0066ff;
     border-radius: 50%;
+    border-color: #00ffff;
+    -webkit-filter: drop-shadow(2px 2px 1px #2b5af7b3);
+    filter: drop-shadow(0px 0px 5px #2b57f7e1);
+    /* text-shadow: 20px 20px #0066ff; */
+    /* border-width: 2px; */
 }
 #earthquakeInfoBox {
     position: absolute;
@@ -122,12 +139,14 @@ body {
 #yearIndicator {
     margin-top: 10px;
     text-align: center;
+    padding-bottom: 20px;
 }
 
 #bottomSlider {
     position: absolute;
+    color: white;
     width: 40%;
-    background-color: white;
+    background-color: rgb(38, 38, 38);
     bottom: 0px;
     z-index: 100;
     border-radius: 15px 15px 0px 0px;
@@ -137,7 +156,6 @@ body {
     left: 50%;
     transform: translateX(-50%);
     display: flex;
-    color: black;
     font-family: Sometype Mono;
 }
 
@@ -149,7 +167,7 @@ body {
 
 #sliderLeft {
     width: 20%;
-    padding-top: 20px;
+    padding-top: 40px;
     display: flex;
     align-items: center;
     justify-content: right;
@@ -161,6 +179,7 @@ body {
     align-items: center;
     padding-top: 20px;
     justify-content: left;
+    padding-top: 40px;
 }
 .slider {
     -webkit-appearance: none;
@@ -181,9 +200,9 @@ body {
   .slider::-webkit-slider-thumb {
     -webkit-appearance: none;
     appearance: none;
-    width: 25px;
-    height: 25px;
-    background: black;
+    width: 30px;
+    height: 30px;
+    background: rgb(255, 255, 255);
     border-radius: 50%;
     cursor: pointer;
   }
@@ -281,37 +300,47 @@ input {
     top: 0;
     width: 450px;
     height: 100%;
-    background-color: white;
+    background-color: rgb(38, 38, 38);
     z-index: 200;
     padding: 40px;
     transition: left 0.3s ease; /* Fügt eine Transition für die linke Position hinzu */
 }
 
 #togglePanel {
-    position: fixed;
-    left: 0;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 30px; /* Breite des Pfeil-Icons */
-    height: 30px; /* Höhe des Pfeil-Icons */
-    background-color: gray; /* Hintergrundfarbe des Pfeil-Icons */
-    z-index: 201; /* Stellt sicher, dass das Icon über dem Panel liegt */
-    cursor: pointer; /* Ändert den Mauszeiger beim Überfahren */
-    transition: left 0.3s ease; /* Fügt eine Transition für die linke Position hinzu */
+  position: fixed;
+  left: 0;
+  top: 50%;
+  border-radius: 0 10px 10px 0;
+  transform: translateY(-50%);
+  width: 30px; /* Breite des Pfeil-Icons */
+  height: 60px; /* Höhe des Pfeil-Icons */
+  background-color: gray; /* Hintergrundfarbe des Pfeil-Icons */
+  z-index: 201; /* Stellt sicher, dass das Icon über dem Panel liegt */
+  cursor: pointer; /* Ändert den Mauszeiger beim Überfahren */
+  transition: left 0.3s ease; /* Fügt eine Transition für die linke Position hinzu */
+}
+
+#togglePanel:hover {
+  background-color: rgb(38, 38, 38); /* Ändert die Hintergrundfarbe beim Überfahren */
 }
 
 #togglePanel::after {
-    content: '>'; /* Fügt den Pfeil hinzu */
-    font-size: 20px; /* Größe des Pfeils */
-    color: white; /* Farbe des Pfeils */
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%); /* Zentriert den Pfeil innerhalb des Symbols */
+  content: url('/Assets/rightWhite.svg'); /* Fügt das SVG-Bild hinzu */
+  width: 20px; /* Breite des SVG-Bildes */
+  height: 20px; /* Höhe des SVG-Bildes */
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%); /* Zentriert das Bild innerhalb des Symbols */
 }
+.controlPanel.open #togglePanel::after {
+  content: url('/Assets/leftWhite.svg'); /* Ändert das Bild, wenn das Panel geöffnet ist */
+}
+
 
 .controlPanel.open {
     left: 0; /* Positioniert das Panel wieder sichtbar im Bildschirm */
+    background-color: rgb(38, 38, 38);
 }
 
 #togglePanel.open {
@@ -320,13 +349,17 @@ input {
 
 
   h2 {
-    color: black;
+    color: white;
     font-family: sometype mono;
   }
 
   p {
     color: black;
     font-family: sometype mono;
+  }
+
+  .controlPanelText {
+    color: white;
   }
 
 
@@ -416,7 +449,7 @@ input {
 
 
   .btn {
-    background-color: darkgrey; /* Blue background */
+    background-color: #808080; /* Blue background */
     border: none; /* Remove borders */
     color: white; /* White text */
     padding: 12px 16px; /* Some padding */
@@ -428,7 +461,7 @@ input {
   }
 
   .btn:hover {
-    background-color: grey;
+    background-color: rgb(172, 172, 172);
   }
 
   .boxbox {
@@ -439,3 +472,56 @@ input {
     margin-top: 30px;
     margin-bottom: 20px;
   }
+
+
+
+
+
+
+
+
+/* Stil für die Navigationsleiste */
+.navbar {
+  font-family: sometype mono;
+  font-size: 18px;
+  overflow: hidden;
+  background-color: transparent; /* Transparenter Hintergrund */
+  position: sticky;
+  top: 0;
+  width: 100%;
+  display: flex;
+  justify-content: center; /* Zentriert die Links */
+  align-items: center;
+  z-index: 1000;
+  gap: 50px;
+}
+
+/* Stil für die Navigationsleiste Links */
+.navbar a {
+  color: #999; /* Inaktiver Textfarbe */
+  text-align: center;
+  padding: 14px 20px;
+  text-decoration: none;
+  position: relative; /* Relativer Positionierung für das Unterstrichene */
+}
+
+/* Stil für die aktiven Links */
+.navbar a.active {
+  color: white; /* Aktiver Textfarbe */
+}
+
+.navbar a.active::after {
+  content: "";
+  position: absolute;
+  bottom: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 50%;
+  height: 1px;
+  background-color: white; /* Weiße Linie als Unterstreichung */
+}
+
+/* Stil für Hover-Effekt auf Links */
+.navbar a:hover {
+  color: white; /* Textfarbe ändert sich zu Weiß */
+}
